fix: Spacing in Mobile Styles

--- a/src/Components/Footer/styles.module.css
+++ b/src/Components/Footer/styles.module.css
@@ -73,4 +73,8 @@ a {
   .sectionHeader {
     min-height: 20vh;
   }
+  .socials{
+    justify-content:space-between;
+    width: 30%;
+  }
 }
