--- a/src/Components/Home/styles.module.css
+++ b/src/Components/Home/styles.module.css
@@ -166,6 +166,7 @@ line-height: 19px;
   .banner {
    display: flex;
    flex-direction: column-reverse;
+   height: 100%;
    padding: 70px 20px 0px 20px;
   }
   .bannerImg img{
@@ -173,14 +174,19 @@ line-height: 19px;
     height: 100%;
   }
   .bannerContent {
-    padding-top: 10px 20px 0px 20px;
+    padding: 30px 0px 20px 0px;
     width: 100%;
+    height: 100%;
     min-height: 50vh;
    
   }
   .bannerContent h1{
     font-size: 36px;
     line-height: 100%;
+    padding-bottom: 10px;
+  }
+  .bannerContent p{
+    padding-bottom: 10px;
   }
   .brands {
     /* margin-top: 67px;
